--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+scroll-behaviour: smooth;
+}
 .container.dark-mode{
     background: purple;
     color: #fff;
